@@ -1,0 +1,6 @@
+galpy.potential.plotSurfaceDensities
+====================================
+
+.. autofunction:: galpy.potential.plotSurfaceDensities
+
+
