@@ -1,0 +1,6 @@
+galpy.potential.Potential.plotSurfaceDensity
+============================================
+
+.. automethod:: galpy.potential.Potential.plotSurfaceDensity
+
+
